# tangerine

./: .cspell.json  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.rust.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/copier/direnv/: 10-python.sh
.config/copier/mise/tasks/: gen-init.sh  lint-toml.sh
.config/mise/: config.toml
.config/mise/conf.d/: 10-python.toml
.config/mise/tasks/: dist.py  dist.sh  gen-complete.sh  gen-markdown.sh
.config/release-please/: config.json
.github/workflows/: build.yaml  ci.yaml  publish.yaml  release.yaml  test.yaml
completions/bash/: tangerine
completions/fish/: tangerine.fish
completions/zsh/: _tangerine
docs/: help.md
reference/liblaf/tangerine/: index.html
reference/liblaf/tangerine/cli/: index.html
reference/liblaf/tangerine/cli/invoke/: index.html
reference/liblaf/tangerine/cli/parse/: index.html
reference/liblaf/tangerine/core/: index.html
reference/liblaf/tangerine/core/constants/: index.html
reference/liblaf/tangerine/core/environment/: index.html
reference/liblaf/tangerine/core/template/: index.html
reference/liblaf/tangerine/plugin/: index.html
reference/liblaf/tangerine/utils/: index.html
scripts/: dist.py
search/: search_index.json
src/: cli.rs  logging.rs  main.rs  utils.rs
src/cli/: app.rs  mod.rs
src/core/: constants.rs  environment.rs  loader.rs  mod.rs  module.rs  profile.rs  template.rs
src/liblaf/tangerine/templates/projects/: copier.md
src/liblaf/tangerine/templates/python/: badges.md  projects.md
src/utils/: mod.rs  process.rs
