#:schema https://www.schemastore.org/cargo.json

[package]
name = "tangerine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.43", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
directories = "6.0.0"
etcetera = "0.10.0"
minijinja = { version = "2.11.0", features = ["loader"] }
minijinja-embed = "2.11.0"
once_cell = "1.21.3"
regex = "1.11.1"
serde = "1.0.219"
serde_yml = "0.0.12"
shadow-rs = "1.2.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
minijinja-embed = "2.11.0"
