#:schema https://www.schemastore.org/cargo.json

[package]
name = "tangerine"
version = "0.2.0"
authors = ["liblaf <30631553+liblaf@users.noreply.github.com>"]
edition = "2024"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/liblaf/tangerine"
license = "MIT"
keywords = []
categories = []

[workspace.dependencies]
minijinja-embed = "2.11.0"
shadow-rs = { version = "1.2.1", features = ["metadata"] }

[dependencies]
clap = { version = "4.5.44", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
color-eyre = "0.6.5"
colorchoice-clap = "1.0.7"
console = "0.16.0"
etcetera = "0.10.0"
git2 = "0.20.2"
glob = "0.3.3"
minijinja = { version = "2.11.0", features = ["loader"] }
minijinja-embed.workspace = true
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.1"
serde_yml = "0.0.12"
shadow-rs.workspace = true
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }

[build-dependencies]
minijinja-embed.workspace = true
shadow-rs.workspace = true

[badges]
maintenance = { status = "actively-developed" }
