#:schema https://www.schemastore.org/cargo.json

[package]
name = "tangerine"
version = "0.3.0"
authors = ["liblaf <30631553+liblaf@users.noreply.github.com>"]
edition = "2024"
description = "A short description of my package"
readme = "README.md"
repository = "https://github.com/liblaf/tangerine"
license = "MIT"
keywords = []
categories = []

[workspace.dependencies]
minijinja-embed = "2"
shadow-rs = { version = "1", features = ["metadata"] }

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env"] }
clio = { version = "0.3", features = ["clap-parse"] }
color-eyre = "0.6"
etcetera = "0.10"
gix-discover = "0.41"
glob = "0.3"
grapes = { version = "0.1", package = "liblaf-grapes" }
minijinja = { version = "2", features = ["loader"] }
minijinja-embed.workspace = true
once_cell = "1"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
serde_yml = "0.0.12"
shadow-rs.workspace = true
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }

[build-dependencies]
minijinja-embed.workspace = true
shadow-rs.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
clap-complete = ["grapes/clap-complete"]
clap-markdown = ["grapes/clap-markdown"]
